view panel, arrange classes #2 & clean & upload 1.2 to marketplace